In process of updating to AmberTools 18 [incomplete]

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,13 @@ script:
   # Install extras for testing
   - conda install --yes --quiet pip nose nose-timer
   # Workaround for failure to install these when installing local package
-  - conda install --yes openmm>=7.2.0 yaml pyyaml ambertools==17 lxml networkx parmed
+  - conda install --yes openmm>=7.2.0 yaml pyyaml ambertools==18 lxml networkx
+  # Install AmberTools18
+  - conda install ambertools=18 -c http://ambermd.org/downloads/ambertools/conda/
+  # Update parmed
+  # TODO: Update this when branch is merged
+  - pip uninstall --yes parmed
+  - pip install git+https://github.com/jchodera/ParmEd.git@fix-patch-equivalence
   # Build the recipe
   - echo "Building the recipe..."
   - conda build devtools/conda-recipe
@@ -35,22 +41,14 @@ script:
   # Test the openmmforcefields package to make sure installed ffxml files are working
   - echo "Testing the installed openmmforcefields ffxml files..."
   - cd devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow' && cd ..
-  # TODO: Install parmed dev version; replace with parmed dependency in meta.yaml
-  - conda remove --yes parmed || true
-  # - pip install git+https://github.com/ParmEd/ParmEd.git
-  - pip install git+https://github.com/jchodera/ParmEd.git
-  # Hack in replacement ff15ipq file from David S. Cerutti that will be included in next AmberTools minor version release
-  # TODO: Remove this once AmberTools minor version release has been made
-  - echo "Ugly hack to copy in unreleased ff15ipq bugfix at the sole insistence of Peter Eastman under strong objections..."
-  - mv amber/parm15ipq_10.3.dat $HOME/miniconda3/dat/leap/parm/parm15ipq_10.3.dat
   # Test AMBER conversion
   - echo "Testing AMBER conversion..."
   - cd amber && python convert_amber.py --verbose && cd ..
   # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
   # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
-  #- cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
-  - cd charmm && python convert_charmm.py --verbose && cd ..
+  - cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
+  #- cd charmm && python convert_charmm.py --verbose && cd ..
   - cd charmm && python test_charmm.py --verbose && cd ..
 
 os:
