--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   # Update parmed
   # TODO: Update this when branch is merged
   - pip uninstall --yes parmed
-  - pip install git+https://github.com/jchodera/ParmEd.git@fix-patch-equivalence
+  - pip install git+https://github.com/jchodera/ParmEd.git@fix-template-hasher
   # Build the recipe
   - echo "Building the recipe..."
   - conda build devtools/conda-recipe
@@ -40,16 +40,16 @@ script:
   - conda install --yes --use-local ${PACKAGENAME}
   # Test the openmmforcefields package to make sure installed ffxml files are working
   - echo "Testing the installed openmmforcefields ffxml files..."
-  - cd devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow' && cd ..
+  - cd /home/travis/devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow'
   # Test AMBER conversion
   - echo "Testing AMBER conversion..."
-  - cd amber && python convert_amber.py --verbose && cd ..
+  - cd /home/travis/amber && python convert_amber.py --verbose
   # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
   # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
-  - cd charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml && cd ..
+  - cd /home/travis/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
   #- cd charmm && python convert_charmm.py --verbose && cd ..
-  - cd charmm && python test_charmm.py --verbose && cd ..
+  - cd /home/travis/charmm && python test_charmm.py --verbose
 
 os:
   #- osx # LEaP segfaults on osx under some conditions
