--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,51 @@
-language: c
-sudo: false
+language: python
 
-branches:
-  only:
-    - master
+# Run jobs on container-based infrastructure, can be overridden per job
+
+matrix:
+  include:
+    # Extra includes for OSX since python language is not available by default on OSX
+    - os: osx
+      language: generic
+      env: PYTHON_VER=3.6
+    - os: osx
+      language: generic
+      env: PYTHON_VER=3.7
+
+
+    - os: linux
+      language: generic  # No need to set Python version since its conda
+      env: PYTHON_VER=3.6
+    - os: linux
+      language: generic
+      env: PYTHON_VER=3.7
+
+
+before_install:
+    # Additional info about the build
+  - uname -a
+  - df -h
+  - ulimit -a
+
+    # Install the Python environment
+  - source devtools/travis-ci/before_install.sh
+  - python -V
 
 install:
-  - source devtools/travis-ci/install.sh
-  - export PYTHONUNBUFFERED=true
-  # Add org channel
-  - conda config --add channels ${ORGNAME}
+
+    # Create test environment for package
+  - python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/test_env.yaml
+    # Activate the test environment
+  - conda activate test
+    # Build and install package
+  - python setup.py develop --no-deps
+
 
 script:
-  - export WORK=`pwd`
-  # Select the desired python version
-  - conda install --yes python=$python
-  # Add omnia conda channels
-  - conda config --add channels omnia-dev --add channels omnia --add channels conda-forge
-  # Force update now that conda-forge has been added
-  - conda update --yes conda
-  # Install extras for testing
-  - conda install --yes --quiet pip nose nose-timer
-  # Build the recipe
-  - echo "Building the recipe..."
-  - conda build devtools/conda-recipe
-  # Install the package
-  - echo "Installing the ${PACKAGENAME} package..."
-  - conda install --yes --use-local ${PACKAGENAME}
-  # Test the openmmforcefields package to make sure installed ffxml files are working
-  - echo "Testing the installed openmmforcefields ffxml files..."
-  - cd $WORK/devtools && nosetests ${PACKAGENAME}.tests.test_amber_import --nocapture --verbosity=2 --with-timer -a '!slow'
-  # Test AMBER conversion
-  - echo "Testing AMBER conversion..."
-  - cd $WORK/amber && python convert_amber.py --verbose
-  # Test CHARMM conversion
-  - echo "Testing CHARMM conversion..."
-  # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
-  - cd $WORK/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
-  #- cd charmm && python convert_charmm.py --verbose && cd ..
-  - cd $WORK/charmm && python test_charmm.py --verbose
+  - pytest -v --cov=openmmforcefields openmmforcefields/tests/
 
-os:
-  #- osx # LEaP segfaults on osx under some conditions
-  - linux
+notifications:
+    email: false
 
-env:
-  matrix:
-    - python=2.7  CONDA_PY=2.7
-    - python=3.5  CONDA_PY=3.5
-    - python=3.6  CONDA_PY=3.6
-    - python=3.7  CONDA_PY=3.7
-
-  global:
-    - ORGNAME="omnia"
-    - PACKAGENAME="openmmforcefields"
+after_success:
+  - codecov
