--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,19 @@ install:
 
 
 script:
+  # Test installed package
   - pytest -v --cov=openmmforcefields openmmforcefields/tests/
+
+  # Test AMBER conversion
+  - echo "Testing AMBER conversion..."
+  - cd $WORK/amber && python convert_amber.py --verbose
+
+  # Test CHARMM conversion
+  - echo "Testing CHARMM conversion..."
+  # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
+  - cd $WORK/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
+  #- cd charmm && python convert_charmm.py --verbose && cd ..
+  - cd $WORK/charmm && python test_charmm.py --verbose
 
 notifications:
     email: false
