--- a/.travis.yml
+++ b/.travis.yml
@@ -40,23 +40,24 @@ install:
     # Build and install package
     # Can't use 'develop' mode because we remove symlinks after install is complete
     #- python setup.py develop --no-deps
-    - python setup.py install --no-deps
+  - python setup.py install --no-deps
 
 
 script:
-  # Test installed package
-  - pytest -v --cov=openmmforcefields openmmforcefields/tests/
+    # Test installed package
+  - pytest -v --cov=openmmforcefields openmmforcefields/tests
 
-  # Test AMBER conversion
+    # Test AMBER conversion
   - echo "Testing AMBER conversion..."
-  - cd $WORK/amber && python convert_amber.py --verbose
+  - cd $WORK/amber && python convert_amber.py --input gaff.yaml --verbose
 
-  # Test CHARMM conversion
+    # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
-  # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
+    # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
   - cd $WORK/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
-  #- cd charmm && python convert_charmm.py --verbose && cd ..
+    #- cd charmm && python convert_charmm.py --verbose && cd ..
   - cd $WORK/charmm && python test_charmm.py --verbose
+
 
 notifications:
     email: false
