--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ install:
     # Build and install package
     # Can't use 'develop' mode because we remove symlinks after install is complete
     #- python setup.py develop --no-deps
-  - python setup.py install --no-deps
+  - python setup.py install
 
 
 script:
