--- a/.travis.yml
+++ b/.travis.yml
@@ -47,16 +47,20 @@ script:
     # Test installed package
   - pytest -v --cov=openmmforcefields openmmforcefields/tests
 
+    # STore current working directory
+  - export WORK=`pwd`
+
     # Test AMBER conversion
   - echo "Testing AMBER conversion..."
-  - cd $HOME/amber && python convert_amber.py --input gaff.yaml --verbose
+  - cd $WORK/amber && python convert_amber.py --input gaff.yaml --verbose
 
     # Test CHARMM conversion
   - echo "Testing CHARMM conversion..."
     # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
-  - cd $HOME/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
+    #- cd $WORK/charmm && python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
+  - cd $WORK/charmm && python convert_charmm.py --verbose --in files/waters.yaml
     #- cd charmm && python convert_charmm.py --verbose && cd ..
-  - cd $HOME/charmm && python test_charmm.py --verbose
+  - cd $WORK/charmm && python test_charmm.py --verbose
 
 
 notifications:
