--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -3,6 +3,7 @@ name: test
 channels:
   - conda-forge
   - omnia
+  - openeye
   - defaults
 
 dependencies:
@@ -30,3 +31,6 @@ dependencies:
     # openforcefield toolkit and force fields
   - openforcefield >=0.6.0
   - openforcefields >=1.0.0
+
+    # OpenEye toolkits are only used to speed up testing; they are not required for use
+  - openeye-toolkits
