--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 
 env:
   global:
-    - OE_LICENSE="$HOME/devtools/travis-ci/oe_license.txt"
+    - OE_LICENSE="$TRAVIS_BUILD_DIR/devtools/travis-ci/oe_license.txt"
 
 matrix:
   include:
@@ -44,9 +44,12 @@ install:
   - python devtools/scripts/create_conda_env.py -n=test -p=$PYTHON_VER devtools/conda-envs/test_env.yaml
     # Activate the test environment
   - conda activate test
+    # DEBUG
+  - echo "OE_LICENSE path:"
+  - echo $OE_LICENSE
     # Workaround for https://github.com/openmm/openmm/pull/2511
-    # TODO: Remove this when builds including https://github.com/openmm/openmm/pull/2511 are released
-  - echo "Overwriting forcefield.py with fix from https://github.com/openmm/openmm/pull/2511"
+    # TODO: Remove this when OpenMM builds including https://github.com/openmm/openmm/pull/2511 are released
+  - echo "Overwriting OpenMM forcefield.py with fix from https://github.com/openmm/openmm/pull/2511"
   - wget -q https://raw.githubusercontent.com/openmm/openmm/4f48402f1be3e0f049ae0e8595db638d297b0d75/wrappers/python/simtk/openmm/app/forcefield.py -O `python -c "from simtk.openmm.app import forcefield; print(forcefield.__file__)"`
     # Build and install package
     # Can't use 'develop' mode because we remove symlinks after install is complete
