Re-activate SystemGenerator tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ script:
   #- pytest -v --cov=openmmforcefields openmmforcefields/tests
   - pytest -v -x -s --log-cli-level INFO --cov=openmmforcefields openmmforcefields/tests/test_amber_import.py
   - pytest -v -x -s --log-cli-level INFO --cov=openmmforcefields openmmforcefields/tests/test_template_generators.py
+  - pytest -v -x -s --log-cli-level INFO --cov=openmmforcefields openmmforcefields/tests/test_system_generator.py
 
     # Store current working directory
   - export WORK=`pwd`
