Update to use openmm 7.4.2 rc in build

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -3,6 +3,7 @@ name: test
 channels:
   - conda-forge
   - omnia
+  - omnia/label/rc
   - openeye
   - defaults
 
@@ -17,7 +18,7 @@ dependencies:
   - codecov
 
     # Requirements for converted force field installer
-  - openmm >=7.4.1
+  - openmm >=7.4.2
 
     # Requirements for conversion tools
   - pyyaml
