Clean up logger output

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
 script:
     # Test installed package
   #- pytest -v --cov=openmmforcefields openmmforcefields/tests
-  - export LOGLEVEL="WARNING"
+  - export LOGLEVEL="INFO"
   - pytest -v -x -s --log-cli-level $LOGLEVEL --cov=openmmforcefields openmmforcefields/tests/test_amber_import.py
   - pytest -v -x -s --log-cli-level $LOGLEVEL --cov=openmmforcefields openmmforcefields/tests/test_template_generators.py
   - pytest -v -x -s --log-cli-level $LOGLEVEL --cov=openmmforcefields openmmforcefields/tests/test_system_generator.py
