--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,9 +80,10 @@ jobs:
       shell: bash -l {0}
       run: |
 
-        # TODO: Find a way to avoid timing out on travis when running full charmm36.yaml conversion below
+        # TODO: Uncomment these tests when new ParmEd is released
+        # TODO: Find a way to avoid timing out when running full charmm36.yaml conversion below
         # python convert_charmm.py --verbose --in files/waters.yaml && python convert_charmm.py --verbose --in files/charmm36.yaml
-        python convert_charmm.py --verbose --in files/waters.yaml
+        # python convert_charmm.py --verbose --in files/waters.yaml
         # python convert_charmm.py --verbose
 
         # TODO: Uncomment this when tests are expected to work
