--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -47,4 +47,5 @@ dependencies:
   - qcportal
 
   - pip:
-      - git+https://github.com/choderalab/espaloma.git@0.2.1
+      #- git+https://github.com/choderalab/espaloma.git@0.2.1
+      - git+https://github.com/choderalab/espaloma.git
